--- a/JS/Aula12ex/ex015/estilo.css
+++ b/JS/Aula12ex/ex015/estilo.css
@@ -23,3 +23,9 @@ footer{
     color: white;
     font-style: italic;
 }
+
+#foto{
+    border-radius: 49%;
+    width: 350px;
+    height: 350px;
+}
